full_test/testcases/step11/arr_glob.err
Syntax error: line 1, column 7
int a[2];
Syntax error: line 1, column 9
int a[2];
Syntax error: line 2, column 1
int main() {
Syntax error: line 2, column 5
int main() {
Syntax error: line 3, column 7
    a[0]=a[1]=5;
Syntax error: line 3, column 12
    a[0]=a[1]=5;
Syntax error: line 4, column 14
    return a[1]*a[0];
Syntax error: line 4, column 19
    return a[1]*a[0];
